--- a/index.html
+++ b/index.html
@@ -33,36 +33,40 @@
             </div>
         </div>
 
-        <div id="toma-ordenes-screen" class="screen">
-            <div class="container">
-                <div class="order-header">
-                    <h2><i class="fas fa-clipboard-list"></i> Orden de <span id="orden-tipo"></span> <span id="orden-numero"></span></h2>
-                    <div class="mesa-info">
-                        <label>Cuentas: <input type="number" id="cuentas" value="1" min="1" onchange="actualizarCuentas()"></label>
-                    </div>
-                </div>
-                <div class="selection scrollable">
-                    <div id="categories" class="categories">
-                        <div class="category entradas" onclick="showProducts('entradas')"><i class="fas fa-carrot"></i> Entradas</div>
-                        <div class="category platos" onclick="showProducts('platos')"><i class="fas fa-drumstick-bite"></i> Platos Fuertes</div>
-                        <div class="category postres" onclick="showProducts('postres')"><i class="fas fa-ice-cream"></i> Postres</div>
-                        <div class="category bebidas" onclick="showProducts('bebidas')"><i class="fas fa-coffee"></i> Bebidas</div>
-                        <div class="category bebidasAlcoolicas" onclick="showProducts('bebidasAlcoolicas')"><i class="fas fa-wine-glass-alt"></i> Bebidas Alcohólicas</div>
-                        <div class="category adicionales" onclick="showProducts('adicionales')"><i class="fas fa-pepper-hot"></i> Adicionales</div>
-                    </div>
-                    <div id="products" class="products"></div>
-                    <button id="back-to-categories" class="center-button" onclick="showCategories()" style="display: none;"><i class="fas fa-arrow-left"></i> Volver a Categorías</button>
-                </div>
-                <div class="order scrollable">
-                    <h3><i class="fas fa-list-alt"></i> Orden Actual</h3>
-                    <ul id="orden-list"></ul>
-                </div>
-                <div class="footer">
-                    <button onclick="confirmarOrden()"><i class="fas fa-check"></i> Confirmar Orden</button>
-                    <button onclick="cancelarOrden()"><i class="fas fa-times"></i> Cancelar</button>
-                </div>
-            </div>
+  <div id="toma-ordenes-screen" class="screen">
+      <div class="container">
+        <div class="order-header">
+          <h2>Orden de <span id="orden-tipo"></span> <span id="orden-numero"></span></h2>
+          <div class="mesa-info">
+            <label for="cuentas">Cuenta: <input type="number" id="cuentas" value="1" min="1" onchange="actualizarCuentas()"></label>
+          </div>
         </div>
+        
+        <div class="order-content">
+          <div class="selection-area">
+            <div id="categories" class="categories">
+              <div class="category entradas" onclick="showProducts('entradas')">Entradas</div>
+              <div class="category platos" onclick="showProducts('platos')">Platos Fuertes</div>
+              <div class="category postres" onclick="showProducts('postres')">Postres</div>
+              <div class="category bebidas" onclick="showProducts('bebidas')">Bebidas</div>
+              <div class="category bebidasAlcoolicas" onclick="showProducts('bebidasAlcoolicas')">Bebidas Alcohólicas</div>
+              <div class="category adicionales" onclick="showProducts('adicionales')">Adicionales</div>
+            </div>
+            <div id="products" class="products"></div>
+            <button id="back-to-categories" onclick="showCategories()">Volver a Categorías</button>
+          </div>
+          <div class="order-summary">
+            <h3>Orden Actual</h3>
+            <ul id="orden-list" class="orden-list"></ul>
+          </div>
+        </div>
+    
+        <div class="footer">
+          <button onclick="confirmarOrden()">Confirmar Orden</button>
+          <button onclick="cancelarOrden()">Cancelar</button>
+        </div>
+      </div>
+  </div>
 
         <div id="confirmacion-screen" class="screen">
             <div class="container">
