--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   <div class="category adicionales" onclick="showProducts('adicionales')">Adicionales</div>
                 </div>
                 <div id="products" class="products"></div>
-                <button id="back-to-categories" onclick="showCategories()">Volver a Categorías</button>
+                <button id="back-to-categories" class="center-button" onclick="showCategories()">Volver a Categorías</button>
               </div>
               <div class="order-summary">
                 <h3>Orden Actual</h3>
